--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 *.class
 *.log
 
+# InteliJ
+.idea
+
 # sbt specific
 .cache/
 .history/
@@ -11,6 +14,7 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+project/
 
 # Scala-IDE specific
 .scala_dependencies
