NewOrderSingle handler for FIX protocol - FixOrderHandler as FIX acceptor

--- a/src/main/resources/config/fix_connection.config
+++ b/src/main/resources/config/fix_connection.config
@@ -6,8 +6,8 @@ FileStorePath=fix-data
 LogonTimeout=6000
 ReconnectInterval=6030
 
-[SESSION] #A single session
-BeginString=FIX.5.0
+[SESSION]
+BeginString=FIX.4.4
 SenderCompID=NEXBOOK
 TargetCompID=FIX_ORDER_GEN
 StartDay=sunday
@@ -18,4 +18,4 @@ HeartBtInt=30
 CheckLatency=N
 SocketAcceptPort=12000
 UseDataDictionary=Y
-DataDictionary=FIX50SP2.xml
+DataDictionary=FIX44.xml
