- saving all orders to mongoDB - tests fix

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,4 +3,9 @@ org.nexbook {
   fix.config {
     path = "config/fix_connection.config"
   }
+  mongo {
+    host = "localhost"
+    port = "27017"
+    dbName = "nexbook"
+  }
 }
