- Execution: added executionSpeed - handling order timestamp for not validated (yet) orders - NewOrder - 4 fix sessions - async logging - handling ms for timestamps in JSON - removed GeneralRespondHandler as delegating handler - performance optimizations

--- a/src/main/resources/config/fix_connection.config
+++ b/src/main/resources/config/fix_connection.config
@@ -18,9 +18,19 @@ CheckLatency=N
 [SESSION]
 SenderCompID=NEXBOOK
 TargetCompID=FIX_ORDER_GEN1
-SocketAcceptPort=12000
+SocketAcceptPort=12001
 
 [SESSION]
 SenderCompID=NEXBOOK
 TargetCompID=FIX_ORDER_GEN2
-SocketAcceptPort=12001
+SocketAcceptPort=12002
+
+[SESSION]
+SenderCompID=NEXBOOK
+TargetCompID=FIX_ORDER_GEN3
+SocketAcceptPort=12003
+
+[SESSION]
+SenderCompID=NEXBOOK
+TargetCompID=FIX_ORDER_GEN4
+SocketAcceptPort=12004
