- improving performance test for whole app

--- a/src/main/resources/config/nexbook.conf
+++ b/src/main/resources/config/nexbook.conf
@@ -1,5 +1,6 @@
 nexbook {
-  mode = "Akka"
+  mode = "PubSub" ## Akka/PubSub
+  running = "test" ## test/live
   fix {
     configPath = "config/fix_connection.config"
   }
