- supported financial instruments from config file - new tag: PerformanceTest for running only selected group of tests

--- a/src/main/resources/config/nexbook.conf
+++ b/src/main/resources/config/nexbook.conf
@@ -1,6 +1,7 @@
 nexbook {
-  mode = "PubSub" ## Akka/PubSub
+  mode = "Akka" ## Akka/PubSub
   running = "test" ## test/live
+  symbols = ["EUR/USD", "USD/JPY", "GBP/USD", "USD/CHF", "AUD/USD", "EUR/JPY", "EUR/GBP", "USD/CAD"]
   fix {
     configPath = "config/fix_connection.config"
   }
