- lots of performance improvements: troughput 3900 for PubSub

--- a/src/main/resources/config/nexbook.conf
+++ b/src/main/resources/config/nexbook.conf
@@ -1,5 +1,5 @@
 nexbook {
-  mode = "Akka" ## Akka/PubSub
+  mode = "PubSub" ## Akka/PubSub
   running = "test" ## test/live
   repositoryCollectionType = "mutable"
   symbols = ["EUR/USD", "USD/JPY", "GBP/USD", "USD/CHF", "AUD/USD", "EUR/JPY", "EUR/GBP", "USD/CAD"]
