- db persisting in db configurable in config file - orderRepsository resolver (OrderChainedRepository for db persisting, OrderInMemoryRepository for not persisting) - fixed updating state and fill of order in OrderDatabaseRepository

--- a/src/main/resources/config/nexbook.conf
+++ b/src/main/resources/config/nexbook.conf
@@ -1,7 +1,8 @@
 nexbook {
-  mode = "Akka" ## Akka/PubSub
+  mode = "PubSub" ## Akka/PubSub
   running = "test" ## test/live
   repositoryCollectionType = "mutable"
+  dbPersist = true
   symbols = ["EUR/USD", "USD/JPY", "GBP/USD", "USD/CHF", "AUD/USD", "EUR/JPY", "EUR/GBP", "USD/CAD"]
   fix {
     configPath = "config/fix_connection.config"
