--- a/src/main/resources/config/nexbook.conf
+++ b/src/main/resources/config/nexbook.conf
@@ -2,10 +2,13 @@ nexbook {
   mode = "PubSub" ## Akka/PubSub
   running = "test" ## test/live
   repositoryCollectionType = "mutable"
-  dbPersist = true
+  dbPersist = false
   symbols = ["EUR/USD", "USD/JPY", "GBP/USD", "USD/CHF", "AUD/USD", "EUR/JPY", "EUR/GBP", "USD/CAD"]
   fix {
     configPath = "config/fix_connection.config"
+  }
+  akka {
+    round-robin-router-pool = 64
   }
   mongodb {
     host = "localhost"
