- for performance testing: result calculation and aggregation

--- a/src/main/resources/config/nexbook.conf
+++ b/src/main/resources/config/nexbook.conf
@@ -1,8 +1,8 @@
 nexbook {
-  mode = "PubSub" ## Akka/PubSub
+  mode = "Akka" ## Akka/PubSub
   running = "test" ## test/live
   repositoryCollectionType = "mutable"
-  dbPersist = false
+  dbPersist = true
   symbols = ["EUR/USD", "USD/JPY", "GBP/USD", "USD/CHF", "AUD/USD", "EUR/JPY", "EUR/GBP", "USD/CAD"]
   fix {
     configPath = "config/fix_connection.config"
@@ -16,3 +16,8 @@ nexbook {
     database = "nexbook"
   }
 }
+//akka {
+//  default-dispatcher {
+//    throughput = 5
+//  }
+//}
