- more automation in performance tests - improvements in result logger (name, description, execution time)

--- a/src/main/resources/config/nexbook.conf
+++ b/src/main/resources/config/nexbook.conf
@@ -1,19 +1,10 @@
 nexbook {
   mode = "Akka" ## Akka/PubSub
-  running = "test" ## test/live
-  repositoryCollectionType = "mutable"
+  running = "live" ## test/live
   dbPersist = true
   symbols = ["EUR/USD", "USD/JPY", "GBP/USD", "USD/CHF", "AUD/USD", "EUR/JPY", "EUR/GBP", "USD/CAD"]
-  fix {
-    configPath = "config/fix_connection.config"
-  }
   akka {
     round-robin-router-pool = 64
-  }
-  mongodb {
-    host = "localhost"
-    port = "27017"
-    database = "nexbook"
   }
 }
 //akka {
