- added next scenarios: A01, A02, A03 - SynchronizedMatchingEngine - Async PubSub handler

--- a/src/main/resources/config/scenarios/scenario_A_03.conf
+++ b/src/main/resources/config/scenarios/scenario_A_03.conf
@@ -1,15 +1,15 @@
 nexbook {
-  mode = "Akka" ## Akka/PubSub
+  mode = "PubSub" ## Akka/PubSub
   running = "test" ## test/live
-  dbPersist = true
+  dbPersist = false
   symbols = ["EUR/USD", "USD/JPY", "GBP/USD", "USD/CHF", "AUD/USD", "EUR/JPY", "EUR/GBP", "USD/CAD"]
-  akka {
-    round-robin-router-pool = 64
+  pubsub {
+    asyncPublisher = false
   }
 }
 benchmark {
-  name = "scenario_A_1"
-  description = "Mode: Akka, DbPersist: true, Symbols: 8, OrderCount: 100k, round-robin-router-pool: 64"
+  name = "scenario_A_03"
+  description = "Mode: PubSub, DbPersist: false, Symbols: 8, OrderCount: 100k"
   testDataFile = "orders8_100k.txt"
   expectedOrderCount = 100000
 }
