--- a/src/main/resources/config/scenarios/scenario_C_04.conf
+++ b/src/main/resources/config/scenarios/scenario_C_04.conf
@@ -2,13 +2,13 @@ nexbook {
   mode = "PubSub" ## Akka/PubSub
   running = "test" ## test/live
   dbPersist = true
-  symbols = ["EUR/USD", "USD/JPY", "GBP/USD", "USD/CHF", "AUD/USD", "EUR/JPY", "EUR/GBP", "USD/CAD"]
+  symbols = ["EUR/USD", "USD/JPY", "GBP/USD", "USD/CHF", "AUD/USD", "EUR/JPY", "EUR/GBP", "USD/CAD", "USD/RUB", "USD/MXN", "EUR/CHF", "NZD/USD"]
   pubsub {
     asyncPublisher = true
   }
 }
 benchmark {
-  name = "scenario_A_04"
+  name = "scenario_C_04"
   description = "Mode: PubSub, DbPersist: true, Symbols: 8, OrderCount: 100k"
   testDataFile = "orders8_100k.txt"
   expectedOrderCount = 100000
